2002-02-23  John Kirkland <jpk@bl.org> 1.2.6-cvs-b12

	* Fixed buglet where a non-logged in user could not use the 
	  "View All Comments" feature.  This is bug #521810.

2002-02-23  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b11

	* Added Chris's captionator feature.  It allows you to edit many
	  captions at once (huge time saver!)  Another patch that I should have
	  rolled in umpteen months ago.

	* Added Jesse Mullan's "show album tree" feature that allows you to see
	  the entire tree of child albums at the top level of Gallery.  Thanks,
	  Jesse!  Sorry it took me 5 months to incorporate your patch :-/

2002-02-22 Bharat Mediratta <bharat@fusionone.com> 1.2.6-cvs-b10

	* Incorporated patch from Joseph D. Scheve <chevy@tnatech.com> that
	  allows you to view all the comments for an album.  It's pimp!  Who
	  says that open source doesn't work?

	* Incorporated patch from Jesse Mullan <jmullan@visi.com> that 
	  prevents users from viewing hidden photos by hand-crafting
	  the direct image URL.

2002-02-20  John Kirkland  <jpk@bl.org> 1.2.6-cvs-b9
	
	* At image upload time, jhead now runs against the image that we
	  copy into our album directory instead of the original uploaded
	  image.  The reason for this is because we were not escaping
	  special characters in the original filename.  Characters like
	  <space>, ', and " would cause jhead to fail.  Since our copied
	  version of the file has all of these characters removed, it is
	  a safe alternative.

2002-02-19  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b8

	* Minor tweak -- we now set an extended time limit when moving photos
	  also.

2002-02-11  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b7

	* When uploading photos, we now move the newly uploaded file into
	  gallery's temp directory using the move_uploaded_file() function.
	  This allows us to sidestep the open_basedir restriction.

2002-01-18  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b5
