@@ -11,6 +11,7 @@ Adrian Chung		<adrian@enfusion-group.com>
 Bharat Mediratta	<bharat@menalto.com>
 Chris Smith		<chris@jacko.com>
 Dana Powers		<dana@slothlovechunk.org>
+Eelco Brolman		<eelcob@users.sourceforge.net>
 Jacob Redding		<dexttor@wiredgeek.com>
 Jesse Mullan		<jmullan@visi.com>
 John Kirkland		<jpk@bl.org>
