@@ -1,3 +1,9 @@
+2002-02-23  John Kirkland <jpk@bl.org> 1.2.6-cvs-b13
+
+	* Rotated images no longer lose their exif data.  I incorporated
+	  a patch from Eelco Brolman (eelcob) and made some minor
+	  modifications.  This fixes bug #457358 and feature #473443. 
+
 2002-02-23  John Kirkland <jpk@bl.org> 1.2.6-cvs-b12
 
 	* Fixed buglet where a non-logged in user could not use the 
